--- a/mini_blog/blog/templates/blog/base_generic.html
+++ b/mini_blog/blog/templates/blog/base_generic.html
@@ -17,6 +17,7 @@
                     {% block sidebar %}
                     <ul class="sidebar-nav">
                         <li><a href="{% url 'index' %}">Home</a></li>
+                        <li><a href="{% url 'all-blogs' %}">All Blogs</a></li>
                     </ul>
                     {% endblock %}
                 </div>
