Implementing logic for comment form

--- a/mini_blog/blog/templates/blog/base_generic.html
+++ b/mini_blog/blog/templates/blog/base_generic.html
@@ -8,7 +8,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         {% load static %}
-        <link rel="stylesheet" href="{% static 'catalog/css/styles.css' %}">
+        <link rel="stylesheet" href="{% static 'blog/css/styles.css' %}">
     </head>
     <body>
         <div class="container-fluid">
@@ -18,6 +18,13 @@
                     <ul class="sidebar-nav">
                         <li><a href="{% url 'index' %}">Home</a></li>
                         <li><a href="{% url 'all-blogs' %}">All Blogs</a></li>
+                        <li><a href="{% url 'all-bloggers' %}">All Bloggers</a></li>
+                        {% if user.is_authenticated %}
+                            <li>User: {{ user.get_username }}</li>
+                            <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>   
+                        {% else %}
+                            <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>   
+                        {% endif %} 
                     </ul>
                     {% endblock %}
                 </div>
